--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
   </audio>
   <style>
-    a:hover {
+a:hover {
       color: red;
       background-color: transparent;
       text-decoration: underline;
@@ -43,10 +43,6 @@ content{
 h1,h2,h3,h4,h5,h6,body,p,a,blackquote,code{
     font-family: Helvetica, "PingFang TC", "Microsoft JhengHei","Microsoft Yahei", sans-serif !important;
 }
-
-
-
-
 
 #block1 {
   background-color: white;
@@ -101,27 +97,27 @@ div.d {
               } 
               setInterval(startTime, 1000)    
   </script>
-  <div class = "a">
+  <div style="text-align:center;">
     <div id = "profile">
-      <h1 style="font-family:verdana;"> Personal Information </h1>
+      <h1 style="text-align:center;"> Personal Information </h1>
     </div>
   </div>
 
-  <div class = "a">
-    <h1> This is me (^ ^) </h1>
+  <div style="text-align:center;">
+    <h1 style="text-align:center;"> This is me (^ ^) </h1>
       <img src="materials/IMG_9619.jpeg" alt="Trulli" width="850" height="600" >
   </div>
 
   <br>
 
-<div class = "a">
-  <div id = "block1"> <p> I am Ya Wei Tsai. <br> I graduated from <a href = http://www.nhsh.tp.edu.tw/ >Neihu Senior High School</a>. Now i am a senior student studying in National Taiwan University.
+<div style="text-align:center;">
+  <div id = "block1" style="text-align:center;"> <p> I am Ya Wei Tsai. <br> I graduated from <a href = http://www.nhsh.tp.edu.tw/ >Neihu Senior High School</a>. Now i am a senior student studying in National Taiwan University.
       I major in <a href = http://politics.ntu.edu.tw/>Political Science</a> and double major <a href = http://www.econ.ntu.edu.tw/>Economics</a>. <br>In the next year, I will go to the Lund University, which is located in the Sweden, for exchange program for one semester.  </p></div>
 </div>
 
 
-<div class = "a">  
-  <h1 style="font-family:verdana;"> My Hobbies </h1>
+<div class = "a" style="text-align:center;">  
+  <h1 style="text-align:center;"> My Hobbies </h1>
   <p> Basketball:  My favorite basketball team of NBA is <a href = https://www.mavs.com/>Dallas Mavericks</a>. </p>
   <p> Manga: Here i have a manga list that contains some manga i read recently. (<a href = https://jujutsukaisen.jp/> 咒術迴戰 </a>、<a href = https://kaguya.love/> 輝夜姬想讓人告白〜 </a>、<a href = https://koiuso-anime.com/> 戀愛與謊言 </a>)</p>
   <p> Vtuber:I watch Vtuber as the replenishment of the energy. <br>My favorite detective - <a href = https://www.youtube.com/channel/UCyl1z3jo3XHR1riLFKG5UAg>Anelia Watson</a>, Genius of puns and drawing - <a href =  https://www.youtube.com/channel/UCMwGHR0BTZuLsmjY_NT5Pwg>Ina</a>, and the Best singer - <a href = https://www.youtube.com/channel/UC5CwaMl1eIgY8h02uZw7u8A>Suisei</a> and Kawaii<a href = https://www.youtube.com/channel/UCoSrY_IQQVpmIRZ9Xf-y93g>Gura</a>, etc. All of them are the channels which i would watch in my leisure time.</p> 
