--- a/index.html
+++ b/index.html
@@ -32,13 +32,7 @@ a:hover {
 content{
   font-size: 16px;
 }
-  #body_1 {
-  background: url("materials/out-transparent-39.gif") no-repeat right bottom;
-  background-size: 200px 200px;
-  margin-right: 200px;
-  background-color:rgba(242, 232, 252, 0.6)
-  
-}
+
 
 h1,h2,h3,h4,h5,h6,body,p,a,blackquote,code{
     font-family: Helvetica, "PingFang TC", "Microsoft JhengHei","Microsoft Yahei", sans-serif !important;
@@ -98,7 +92,7 @@ div.d {
               setInterval(startTime, 1000)    
   </script>
   <div style="text-align:center;">
-    <div id = "profile">
+    <div id = "profile" style="text-align:center;">
       <h1 style="text-align:center;"> Personal Information </h1>
     </div>
   </div>
@@ -122,7 +116,7 @@ div.d {
   <p> Manga: Here i have a manga list that contains some manga i read recently. (<a href = https://jujutsukaisen.jp/> 咒術迴戰 </a>、<a href = https://kaguya.love/> 輝夜姬想讓人告白〜 </a>、<a href = https://koiuso-anime.com/> 戀愛與謊言 </a>)</p>
   <p> Vtuber:I watch Vtuber as the replenishment of the energy. <br>My favorite detective - <a href = https://www.youtube.com/channel/UCyl1z3jo3XHR1riLFKG5UAg>Anelia Watson</a>, Genius of puns and drawing - <a href =  https://www.youtube.com/channel/UCMwGHR0BTZuLsmjY_NT5Pwg>Ina</a>, and the Best singer - <a href = https://www.youtube.com/channel/UC5CwaMl1eIgY8h02uZw7u8A>Suisei</a> and Kawaii<a href = https://www.youtube.com/channel/UCoSrY_IQQVpmIRZ9Xf-y93g>Gura</a>, etc. All of them are the channels which i would watch in my leisure time.</p> 
 </div>
-<body id="body_1"></body>
+
 
   </body>
 
