--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     }
 
     .wrapper {
-      height: 100vh;
+      height: 60vh;
       /*This part is important for centering*/
       display: flex;
       align-items: center;
@@ -280,10 +280,10 @@
 
   <div class="a" style="text-align:center;">
     <h1 style="text-align:center;"> My Hobbies </h1>
-    <p> Basketball: My favorite basketball team of NBA is <a href=https://www.mavs.com />Dallas Mavericks</a>. </p>
-    <p> Manga: Here i have a manga list that contains some manga i read recently. (<a href=https://jujutsukaisen.jp />
+    <p padding:10px 0 margin:10px 0> Basketball: My favorite basketball team of NBA is <a href=https://www.mavs.com />Dallas Mavericks</a>. </p>
+    <p padding:10px 0 margin:10px 0> Manga: Here i have a manga list that contains some manga i read recently. (<a href=https://jujutsukaisen.jp />
       咒術迴戰 </a>、<a href=https://kaguya.love /> 輝夜姬想讓人告白〜 </a>、<a href=https://koiuso-anime.com /> 戀愛與謊言 </a>)</p>
-    <p> Vtuber:I watch Vtuber as the replenishment of the energy. <br>My favorite detective - <a
+    <p padding:10px 0 margin:10px 0> Vtuber:I watch Vtuber as the replenishment of the energy. <br>My favorite detective - <a
         href=https://www.youtube.com/channel/UCyl1z3jo3XHR1riLFKG5UAg>Anelia Watson</a>, Genius of puns and drawing - <a
         href=https://www.youtube.com/channel/UCMwGHR0BTZuLsmjY_NT5Pwg>Ina</a>, and the Best singer - <a
         href=https://www.youtube.com/channel/UC5CwaMl1eIgY8h02uZw7u8A>Suisei</a> and Kawaii<a
