--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     }
 
     .typing-demo {
-      width: 32ch;
-      animation: typing 3s steps(32), blink .5s step-end infinite alternate;
+      width: 25ch;
+      animation: typing 3s steps(25), blink .5s step-end infinite alternate;
       white-space: nowrap;
       overflow: hidden;
       border-right: 3px solid;
@@ -256,13 +256,13 @@
   </script>
   <div class="wrapper">
     <div class="typing-demo">
-      This is my personal information.
+      This is my personal page.
     </div>
   </div>
 
   <div style="text-align:center;">
     <h1 style="text-align:center;"> This is me</h1>
-    <img src="materials/IMG_9619.jpeg" alt="Trulli" width="850" height="600">
+    <img src="materials/IMG_9619.jpeg" alt="Trulli" width="400" height="300">
   </div>
 
   <br>
@@ -296,7 +296,7 @@
 
 <!--Hey! This is the original version
 of Simple CSS Waves-->
-
+<p adding:10px 0 margin:10px 0>
 <div class="header">
 
   <!--Content before waves-->
@@ -340,7 +340,7 @@ c-22.4,3-38.4,9.2-47.8,18.3c-11.2,10.9-13.6,26.7-16.3,45c-3.1,20.8-6.6,44.4-25.3
   <p>Daniel Österman | 2019 | Free to use</p>
 </div>
 <!--Content ends-->
-
+</p>>
 
 
 
