--- a/index.html
+++ b/index.html
@@ -227,6 +227,15 @@
       float: left;
       width: 33%;
     }
+#body_1 {
+  background: url("materials/out-transparent-39.gif") no-repeat right top;
+  background-size: 200px 200px;
+  margin-right: 200px;
+  background-color:rgba(242, 232, 252, 0.6)
+  
+}
+
+
   </style>
 
 
@@ -291,6 +300,7 @@
       i would watch in my leisure time.</p>
   </div>
 
+<br>
 
 </body>
 
@@ -340,7 +350,9 @@ c-22.4,3-38.4,9.2-47.8,18.3c-11.2,10.9-13.6,26.7-16.3,45c-3.1,20.8-6.6,44.4-25.3
   <p>Daniel Österman | 2019 | Free to use</p>
 </div>
 <!--Content ends-->
-</p>>
+</p>
+<body id="body_1"></body>
+
 
 
 
