--- a/index.html
+++ b/index.html
@@ -227,13 +227,7 @@
       float: left;
       width: 33%;
     }
-#body_1 {
-  background: url("materials/out-transparent-39.gif") no-repeat right top;
-  background-size: 200px 200px;
-  margin-right: 200px;
-  background-color:rgba(242, 232, 252, 0.6)
-  
-}
+
 
 
   </style>
@@ -264,6 +258,7 @@
     setInterval(startTime, 1000)
   </script>
   <div class="wrapper">
+    <img src="materials/out-transparent-39.gif" alt="Ame" style="float:right top ;width:200px;height:200px;">
     <div class="typing-demo">
       This is my personal page.
     </div>
@@ -351,7 +346,7 @@ c-22.4,3-38.4,9.2-47.8,18.3c-11.2,10.9-13.6,26.7-16.3,45c-3.1,20.8-6.6,44.4-25.3
 </div>
 <!--Content ends-->
 </p>
-<body id="body_1"></body>
+
 
 
 
