--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 
 
 <body>
-  <p id="content"></p>
+  <p id="content" font-family: "Times New Roman"></p>
   <script>
     function startTime() {
       const dateObject = new Date()
@@ -258,14 +258,14 @@
     setInterval(startTime, 1000)
   </script>
   <div class="wrapper">
-    <img src="materials/out-transparent-39.gif" alt="Ame" style="float:right top ;width:200px;height:200px;">
-    <div class="typing-demo">
+    <img src="materials/out-transparent-39.gif" alt="Ame" style="float:left ;width:200px;height:200px;">
+    <div class="typing-demo" >
       This is my personal page.
     </div>
   </div>
 
   <div style="text-align:center;">
-    <h1 style="text-align:center;"> This is me</h1>
+    <h1 style="text-align:center;" font-family: "Times New Roman"> This is me</h1>
     <img src="materials/IMG_9619.jpeg" alt="Trulli" width="400" height="300">
   </div>
 
@@ -273,7 +273,7 @@
 
   <div style="text-align:center;">
     <div id="block1" style="text-align:center;">
-      <p> I am Ya Wei Tsai. <br> I graduated from <a href=http://www.nhsh.tp.edu.tw/>Neihu Senior High School</a>. Now i
+      <p font-family: "Times New Roman">> I am Ya Wei Tsai. <br> I graduated from <a href=http://www.nhsh.tp.edu.tw/>Neihu Senior High School</a>. Now i
         am a senior student studying in National Taiwan University.
         I major in <a href=http://politics.ntu.edu.tw />Political Science</a> and double major <a
           href=http://www.econ.ntu.edu.tw />Economics</a>. <br>In the next year, I will go to the Lund University, which
@@ -283,11 +283,11 @@
 
 
   <div class="a" style="text-align:center;">
-    <h1 style="text-align:center;"> My Hobbies </h1>
-    <p padding:10px 0 margin:10px 0> Basketball: My favorite basketball team of NBA is <a href=https://www.mavs.com />Dallas Mavericks</a>. </p>
-    <p padding:10px 0 margin:10px 0> Manga: Here i have a manga list that contains some manga i read recently. (<a href=https://jujutsukaisen.jp />
+    <h1 style="text-align:center;" font-family: "Times New Roman"> My Hobbies </h1>
+    <p padding:10px 0 margin:10px 0 font-family: "Times New Roman"> Basketball: My favorite basketball team of NBA is <a href=https://www.mavs.com />Dallas Mavericks</a>. </p>
+    <p padding:10px 0 margin:10px 0 font-family: "Times New Roman"> Manga: Here i have a manga list that contains some manga i read recently. (<a href=https://jujutsukaisen.jp />
       咒術迴戰 </a>、<a href=https://kaguya.love /> 輝夜姬想讓人告白〜 </a>、<a href=https://koiuso-anime.com /> 戀愛與謊言 </a>)</p>
-    <p padding:10px 0 margin:10px 0> Vtuber:I watch Vtuber as the replenishment of the energy. <br>My favorite detective - <a
+    <p padding:10px 0 margin:10px 0 font-family: "Times New Roman"> Vtuber:I watch Vtuber as the replenishment of the energy. <br>My favorite detective - <a
         href=https://www.youtube.com/channel/UCyl1z3jo3XHR1riLFKG5UAg>Anelia Watson</a>, Genius of puns and drawing - <a
         href=https://www.youtube.com/channel/UCMwGHR0BTZuLsmjY_NT5Pwg>Ina</a>, and the Best singer - <a
         href=https://www.youtube.com/channel/UC5CwaMl1eIgY8h02uZw7u8A>Suisei</a> and Kawaii<a
@@ -301,7 +301,7 @@
 
 <!--Hey! This is the original version
 of Simple CSS Waves-->
-<p adding:10px 0 margin:10px 0>
+<p adding:10px 0 margin:10px 0 font-family: "Times New Roman">
 <div class="header">
 
   <!--Content before waves-->
