--- a/index.html
+++ b/index.html
@@ -185,19 +185,6 @@
       }
     }
 
-    h1,
-    h2,
-    h3,
-    h4,
-    h5,
-    h6,
-    body,
-    p,
-    a,
-    blackquote,
-    code {
-      font-family: Helvetica, "PingFang TC", "Microsoft JhengHei", "Microsoft Yahei", sans-serif !important;
-    }
 
     #block1 {
       background-color: white;
@@ -257,8 +244,8 @@
     }
     setInterval(startTime, 1000)
   </script>
+  <img src="materials/out-transparent-39.gif" alt="Ame" style="float:left ;width:200px;height:200px;">
   <div class="wrapper">
-    <img src="materials/out-transparent-39.gif" alt="Ame" style="float:left ;width:200px;height:200px;">
     <div class="typing-demo" >
       This is my personal page.
     </div>
@@ -273,7 +260,7 @@
 
   <div style="text-align:center;">
     <div id="block1" style="text-align:center;">
-      <p font-family: "Times New Roman">> I am Ya Wei Tsai. <br> I graduated from <a href=http://www.nhsh.tp.edu.tw/>Neihu Senior High School</a>. Now i
+      <p font-family: "Times New Roman"> I am Ya Wei Tsai. <br> I graduated from <a href=http://www.nhsh.tp.edu.tw/>Neihu Senior High School</a>. Now i
         am a senior student studying in National Taiwan University.
         I major in <a href=http://politics.ntu.edu.tw />Political Science</a> and double major <a
           href=http://www.econ.ntu.edu.tw />Economics</a>. <br>In the next year, I will go to the Lund University, which
