--- a/index.html
+++ b/index.html
@@ -244,11 +244,12 @@
     }
     setInterval(startTime, 1000)
   </script>
-  <img src="materials/out-transparent-39.gif" alt="Ame" style="float:left ;width:200px;height:200px;">
+  
   <div class="wrapper">
     <div class="typing-demo" >
       This is my personal page.
     </div>
+    <img src="materials/out-transparent-39.gif" alt="Ame" style="float:right ;width:200px;height:200px;">
   </div>
 
   <div style="text-align:center;">
@@ -272,9 +273,9 @@
   <div class="a" style="text-align:center;">
     <h1 style="text-align:center;" font-family: "Times New Roman"> My Hobbies </h1>
     <p padding:10px 0 margin:10px 0 font-family: "Times New Roman"> Basketball: My favorite basketball team of NBA is <a href=https://www.mavs.com />Dallas Mavericks</a>. </p>
-    <p padding:10px 0 margin:10px 0 font-family: "Times New Roman"> Manga: Here i have a manga list that contains some manga i read recently. (<a href=https://jujutsukaisen.jp />
+    <p padding:10px 0 margin:10px 0 font-family: "Times New Roman"> Manga: Here i have a manga list that contains some mangas I read recently. (<a href=https://jujutsukaisen.jp />
       咒術迴戰 </a>、<a href=https://kaguya.love /> 輝夜姬想讓人告白〜 </a>、<a href=https://koiuso-anime.com /> 戀愛與謊言 </a>)</p>
-    <p padding:10px 0 margin:10px 0 font-family: "Times New Roman"> Vtuber:I watch Vtuber as the replenishment of the energy. <br>My favorite detective - <a
+    <p padding:10px 0 margin:10px 0 font-family: "Times New Roman"> Vtuber:I watch Vtuber for the replenishment of the energy. <br>My favorite detective - <a
         href=https://www.youtube.com/channel/UCyl1z3jo3XHR1riLFKG5UAg>Anelia Watson</a>, Genius of puns and drawing - <a
         href=https://www.youtube.com/channel/UCMwGHR0BTZuLsmjY_NT5Pwg>Ina</a>, and the Best singer - <a
         href=https://www.youtube.com/channel/UC5CwaMl1eIgY8h02uZw7u8A>Suisei</a> and Kawaii<a
