--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 </head>
 
 
-<body background="FjHIL0">
+<body background-color = #CAFAFE>
   <p id="content" font-family: "Times New Roman"></p>
   <script>
     function startTime() {
@@ -267,7 +267,7 @@
         am a senior student studying in National Taiwan University.
         I major in <a href=http://politics.ntu.edu.tw />Political Science</a> and double major <a
           href=http://www.econ.ntu.edu.tw />Economics</a>. <br>In the next year, I will go to the Lund University, which
-        is located in the Sweden, for exchanging program for one semester.<br> My reasearch interest  </p>
+        is located in the Sweden, for exchanging program for one semester. </p>
     </div>
   </div>
 
