--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 </head>
 
 
-<body background-color = #CAFAFE>
+<body bgcolor = ”#CAFAFE“>
   <p id="content" font-family: "Times New Roman"></p>
   <script>
     function startTime() {
