--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 </head>
 
 
-<body bgcolor = ”#CAFAFE“>
+<body bgcolor = ”#90CCF4“>
   <p id="content" font-family: "Times New Roman"></p>
   <script>
     function startTime() {
@@ -291,7 +291,7 @@
 
 <!--Hey! This is the original version
 of Simple CSS Waves-->
-<p adding:10px 0 margin:10px 0 font-family: "Times New Roman">
+
 <div class="header">
 
   <!--Content before waves-->
@@ -335,7 +335,7 @@ c-22.4,3-38.4,9.2-47.8,18.3c-11.2,10.9-13.6,26.7-16.3,45c-3.1,20.8-6.6,44.4-25.3
   <p>Daniel Österman | 2019 | Free to use</p>
 </div>
 <!--Content ends-->
-</p>
+
 
 
 
