--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 </head>
 
 
-<body bgcolor = ”#90CCF4“>
+<body bgcolor = ”#EEFBFB“>
   <p id="content" font-family: "Times New Roman"></p>
   <script>
     function startTime() {
