--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 </head>
 
 
-<body bgcolor = ”#A0D2EB">
+<body bgcolor = ”#B6D7FF">
   <p id="content" font-family: "Times New Roman"></p>
   <script>
     function startTime() {
