--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 </head>
 
 
-<body bgcolor = skyblue>
+<body bgcolor = "#DCE7F0">
   <p id="content" font-family: "Times New Roman"></p>
   <script>
     function startTime() {
