--- a/index.html
+++ b/index.html
@@ -278,9 +278,9 @@
     <p padding:10px 0 margin:10px 0 font-family: "Times New Roman"> Manga: Here i have a manga list that contains some mangas I read recently. (<a href=https://jujutsukaisen.jp />
       咒術迴戰 </a>、<a href=https://kaguya.love /> 輝夜姬想讓人告白〜 </a>、<a href=https://koiuso-anime.com /> 戀愛與謊言 </a>)</p>
     <p padding:10px 0 margin:10px 0 font-family: "Times New Roman"> Vtuber:I watch Vtuber for the replenishment of the energy. <br>My favorite detective - <a
-        href=https://www.youtube.com/channel/UCyl1z3jo3XHR1riLFKG5UAg>Anelia Watson</a>, Genius of puns and drawing - <a
+        href=https://www.youtube.com/channel/UCyl1z3jo3XHR1riLFKG5UAg>Amelia Watson</a>, Genius of puns and drawing - <a
         href=https://www.youtube.com/channel/UCMwGHR0BTZuLsmjY_NT5Pwg>Ina</a>, and the Best singer - <a
-        href=https://www.youtube.com/channel/UC5CwaMl1eIgY8h02uZw7u8A>Suisei</a> and Kawaii<a
+        href=https://www.youtube.com/channel/UC5CwaMl1eIgY8h02uZw7u8A>Suisei</a> and Kawaii <a
         href=https://www.youtube.com/channel/UCoSrY_IQQVpmIRZ9Xf-y93g>Gura</a>, etc. All of them are the channels which
       i would watch in my leisure time.</p>
   </div>
